# Qi_IntraChr_InterChr_Interaction

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COPY_FILE_GUIDE.md  EXPLANATION.md  FIX_PUSH_ERROR.md  GITHUB_ACTIONS_EXPLANATION.md  GITHUB_UPLOAD_GUIDE.md  INSTALL_UV.md  INSTALL_WITHOUT_UV.md  METADATA_FILES_EXPLANATION.md  PROJECT_FILES_EXPLANATION.md  PUSH_TO_GITHUB.md  QUICK_START.md  QUICK_UPLOAD.md  README.md  SOLUTION_PUSH.md  UV_EXPLANATION.md  VIRTUAL_ENVIRONMENT_EXPLANATION.md  WHAT_IS_UV.md  github_readme.txt  pyproject.toml  upload_to_github.bat
.github/workflows/: cicd.yml
data/: .gitkeep  README.md  test.vcf  test_ped.map  test_ped.ped
docs/: CITATION.cff  CONTRIBUTING.md
results/: .gitkeep  README.md
src/: __init__.py  data_processor.py  dataset.py  inter_chr_model.py  intra_chr_model.py  main.py  model_components.py  models.py  step1_plink.py  training.py
